--- a/src/overide.css
+++ b/src/overide.css
@@ -14,7 +14,7 @@
     width: 100%;
     position: absolute;
     margin: 0;
-    padding: 0;
+    padding-bottom: 0;
     display: inline;
     background-color: gainsboro;
 }
@@ -23,7 +23,12 @@
     padding: 1rem;
 }
 
-#title{
-    position: relative;
+#cards_container {
     padding-top: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 7rem;
+    position: relative;
+    width: 14rem;
+    height: 45rem;
+    overflow-y: scroll;
 }
