--- a/src/overide.css
+++ b/src/overide.css
@@ -2,6 +2,10 @@
     color: white !important;
 }
 
+#root {
+    height: fit-content;
+}
+
 #footer {
     width: 100%;
     color: white !important;
