--- a/src/overide.css
+++ b/src/overide.css
@@ -2,10 +2,6 @@
     color: white !important;
 }
 
-#root {
-    height: fit-content;
-}
-
 #footer {
     width: 100%;
     color: white !important;
@@ -33,6 +29,6 @@
     margin-bottom: 7rem;
     position: relative;
     width: 14rem;
-    height: fit-content;
+    height: 31rem;
     overflow-y: scroll;
 }
