--- a/src/overide.css
+++ b/src/overide.css
@@ -22,6 +22,17 @@
         padding-top: 30%;
         vertical-align: middle;
     }
+    #cards_container {
+        padding-right: 0%;
+        padding-left: 1% !important;
+        position: relative !important;
+        width: 150%;
+        height: 80vmin;
+        overflow-y: scroll;
+    }
+    #left_container {
+        width: 100% !important;
+    }
 }
 
 .navbar_link {
